rust/zypp-agama/zypp-agama-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const __bool_true_false_are_defined: u32 = 1;
pub const true_: u32 = 1;
pub const false_: u32 = 0;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ProgressData {
    pub value: ::std::os::raw::c_longlong,
    pub name: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ProgressData"][::std::mem::size_of::<ProgressData>() - 16usize];
    ["Alignment of ProgressData"][::std::mem::align_of::<ProgressData>() - 8usize];
    ["Offset of field: ProgressData::value"][::std::mem::offset_of!(ProgressData, value) - 0usize];
    ["Offset of field: ProgressData::name"][::std::mem::offset_of!(ProgressData, name) - 8usize];
};
#[doc = " @return true to continue, false to abort. Can be ignored"]
pub type ZyppProgressCallback = ::std::option::Option<
    unsafe extern "C" fn(zypp_data: ProgressData, user_data: *mut ::std::os::raw::c_void) -> bool,
>;
pub const PROBLEM_RESPONSE_PROBLEM_RETRY: PROBLEM_RESPONSE = 0;
pub const PROBLEM_RESPONSE_PROBLEM_ABORT: PROBLEM_RESPONSE = 1;
pub const PROBLEM_RESPONSE_PROBLEM_IGNORE: PROBLEM_RESPONSE = 2;
pub type PROBLEM_RESPONSE = ::std::os::raw::c_uint;
pub const OPTIONAL_PROBLEM_RESPONSE_OPROBLEM_RETRY: OPTIONAL_PROBLEM_RESPONSE = 0;
pub const OPTIONAL_PROBLEM_RESPONSE_OPROBLEM_ABORT: OPTIONAL_PROBLEM_RESPONSE = 1;
pub const OPTIONAL_PROBLEM_RESPONSE_OPROBLEM_IGNORE: OPTIONAL_PROBLEM_RESPONSE = 2;
pub const OPTIONAL_PROBLEM_RESPONSE_OPROBLEM_NONE: OPTIONAL_PROBLEM_RESPONSE = 3;
pub type OPTIONAL_PROBLEM_RESPONSE = ::std::os::raw::c_uint;
pub const DownloadProgressError_DPE_NO_ERROR: DownloadProgressError = 0;
pub const DownloadProgressError_DPE_NOT_FOUND: DownloadProgressError = 1;
pub const DownloadProgressError_DPE_IO: DownloadProgressError = 2;
pub const DownloadProgressError_DPE_ACCESS_DENIED: DownloadProgressError = 3;
pub const DownloadProgressError_DPE_ERROR: DownloadProgressError = 4;
pub type DownloadProgressError = ::std::os::raw::c_uint;
pub type ZyppDownloadStartCallback = ::std::option::Option<
    unsafe extern "C" fn(
        url: *const ::std::os::raw::c_char,
        localfile: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ),
>;
pub type ZyppDownloadProgressCallback = ::std::option::Option<
    unsafe extern "C" fn(
        value: ::std::os::raw::c_int,
        url: *const ::std::os::raw::c_char,
        bps_avg: f64,
        bps_current: f64,
        user_data: *mut ::std::os::raw::c_void,
    ) -> bool,
>;
pub type ZyppDownloadProblemCallback = ::std::option::Option<
    unsafe extern "C" fn(
        url: *const ::std::os::raw::c_char,
        error: DownloadProgressError,
        description: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ) -> PROBLEM_RESPONSE,
>;
pub type ZyppDownloadFinishCallback = ::std::option::Option<
    unsafe extern "C" fn(
        url: *const ::std::os::raw::c_char,
        error: DownloadProgressError,
        reason: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DownloadProgressCallbacks {
    pub start: ZyppDownloadStartCallback,
    pub start_data: *mut ::std::os::raw::c_void,
    pub progress: ZyppDownloadProgressCallback,
    pub progress_data: *mut ::std::os::raw::c_void,
    pub problem: ZyppDownloadProblemCallback,
    pub problem_data: *mut ::std::os::raw::c_void,
    pub finish: ZyppDownloadFinishCallback,
    pub finish_data: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of DownloadProgressCallbacks"]
        [::std::mem::size_of::<DownloadProgressCallbacks>() - 64usize];
    ["Alignment of DownloadProgressCallbacks"]
        [::std::mem::align_of::<DownloadProgressCallbacks>() - 8usize];
    ["Offset of field: DownloadProgressCallbacks::start"]
        [::std::mem::offset_of!(DownloadProgressCallbacks, start) - 0usize];
    ["Offset of field: DownloadProgressCallbacks::start_data"]
        [::std::mem::offset_of!(DownloadProgressCallbacks, start_data) - 8usize];
    ["Offset of field: DownloadProgressCallbacks::progress"]
        [::std::mem::offset_of!(DownloadProgressCallbacks, progress) - 16usize];
    ["Offset of field: DownloadProgressCallbacks::progress_data"]
        [::std::mem::offset_of!(DownloadProgressCallbacks, progress_data) - 24usize];
    ["Offset of field: DownloadProgressCallbacks::problem"]
        [::std::mem::offset_of!(DownloadProgressCallbacks, problem) - 32usize];
    ["Offset of field: DownloadProgressCallbacks::problem_data"]
        [::std::mem::offset_of!(DownloadProgressCallbacks, problem_data) - 40usize];
    ["Offset of field: DownloadProgressCallbacks::finish"]
        [::std::mem::offset_of!(DownloadProgressCallbacks, finish) - 48usize];
    ["Offset of field: DownloadProgressCallbacks::finish_data"]
        [::std::mem::offset_of!(DownloadProgressCallbacks, finish_data) - 56usize];
};
pub const DownloadResolvableError_DRE_NO_ERROR: DownloadResolvableError = 0;
pub const DownloadResolvableError_DRE_NOT_FOUND: DownloadResolvableError = 1;
pub const DownloadResolvableError_DRE_IO: DownloadResolvableError = 2;
pub const DownloadResolvableError_DRE_INVALID: DownloadResolvableError = 3;
pub type DownloadResolvableError = ::std::os::raw::c_uint;
pub const DownloadResolvableFileError_DRFE_NO_ERROR: DownloadResolvableFileError = 0;
pub const DownloadResolvableFileError_DRFE_NOT_FOUND: DownloadResolvableFileError = 1;
pub const DownloadResolvableFileError_DRFE_IO: DownloadResolvableFileError = 2;
pub const DownloadResolvableFileError_DRFE_ACCESS_DENIED: DownloadResolvableFileError = 3;
pub const DownloadResolvableFileError_DRFE_ERROR: DownloadResolvableFileError = 4;
pub type DownloadResolvableFileError = ::std::os::raw::c_uint;
#[doc = "< Signature is OK."]
pub const GPGCheckPackageResult_CHK_OK: GPGCheckPackageResult = 0;
#[doc = "< Signature is unknown type."]
pub const GPGCheckPackageResult_CHK_NOTFOUND: GPGCheckPackageResult = 1;
#[doc = "< Signature does not verify."]
pub const GPGCheckPackageResult_CHK_FAIL: GPGCheckPackageResult = 2;
#[doc = "< Signature is OK, but key is not trusted."]
pub const GPGCheckPackageResult_CHK_NOTTRUSTED: GPGCheckPackageResult = 3;
#[doc = "< Public key is unavailable."]
pub const GPGCheckPackageResult_CHK_NOKEY: GPGCheckPackageResult = 4;
#[doc = "< File does not exist or can't be opened."]
pub const GPGCheckPackageResult_CHK_ERROR: GPGCheckPackageResult = 5;
#[doc = "< File has no gpg signature (only digests)."]
pub const GPGCheckPackageResult_CHK_NOSIG: GPGCheckPackageResult = 6;
pub type GPGCheckPackageResult = ::std::os::raw::c_uint;
pub type ZyppDownloadResolvableStartCallback =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void)>;
pub type ZyppDownloadResolvableProblemCallback = ::std::option::Option<
    unsafe extern "C" fn(
        resolvable_name: *const ::std::os::raw::c_char,
        error: DownloadResolvableError,
        description: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ) -> PROBLEM_RESPONSE,
>;
pub type ZyppDownloadResolvableGpgCheckCallback = ::std::option::Option<
    unsafe extern "C" fn(
        resolvable_name: *const ::std::os::raw::c_char,
        repo_url: *const ::std::os::raw::c_char,
        check_result: GPGCheckPackageResult,
        user_data: *mut ::std::os::raw::c_void,
    ) -> OPTIONAL_PROBLEM_RESPONSE,
>;
pub type ZyppDownloadResolvableFileFinishCallback = ::std::option::Option<
    unsafe extern "C" fn(
        url: *const ::std::os::raw::c_char,
        local_path: *const ::std::os::raw::c_char,
        error: DownloadResolvableFileError,
        error_details: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DownloadResolvableCallbacks {
    pub start_preload: ZyppDownloadResolvableStartCallback,
    pub start_preload_data: *mut ::std::os::raw::c_void,
    pub problem: ZyppDownloadResolvableProblemCallback,
    pub problem_data: *mut ::std::os::raw::c_void,
    pub gpg_check: ZyppDownloadResolvableGpgCheckCallback,
    pub gpg_check_data: *mut ::std::os::raw::c_void,
    pub file_finish: ZyppDownloadResolvableFileFinishCallback,
    pub file_finish_data: *mut ::std::os::raw::c_void,
}
